Fix body overflow

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
 body {
   background-color: var(--white);
   font-family: Rubik;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body::before {
